--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^3.0.15",
     "react-leaflet": "^3.2.1",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
